[gd_scene load_steps=2 format=3 uid="uid://bqt8f2e3d81ui"]

[ext_resource type="Script" uid="uid://ifdrwj56fk8i" path="res://scenes/main_menu/lobby.gd" id="1_awrw8"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_awrw8")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
alignment = 1

[node name="Game Lobby" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayerList" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ReadyButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Ready"

[node name="StartButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="StatusLabel" type="Label" parent="."]
layout_direction = 2
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
